utilities/Sol/modules/grammars/ide/src/test/resources/cocos/valid/OptionFillTypeConfiguration.ide
package valid

typedef configuration OptionFillTypeConfiguration {
    option common: Common {
        label "Some option"
        required true
    }

    frontend task main
}
