utilities/Sol/modules/grammars/ide/src/test/resources/cocos/invalid/OptionFillTypeConfiguration.ide
package invalid

typedef configuration OptionFillTypeConfiguration {
    option common: Common {
        label "Some option"
        required true
    }

    backend task main
}
